--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           go get github.com/tmedwards/tweego
           export PATH=$PATH:$(go env GOPATH)/bin
-          tweego -o ./package/index.html ".\src"
+          tweego -o ./package/index.html "./src"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2
