--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "twee3LanguageTools.storyformat.current": "sugarcube-2",
+    "twee3LanguageTools.storyformat.current": "",
     "twee3LanguageTools.passage.list": true,
     "typescript.locale": "zh-CN"
 }
